[package]
name = "viewrs"
version = "0.1.0"
edition = "2021"
description = "CLI tool to query and display CSV files in the terminal"
homepage = "https://github.com/adamantmc/viewrs"
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
pancurses = "0.17.0"
polars = { version = "0.30.0", features = ["lazy"] }
polars-sql = "0.30.0"
